--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,12 +13,14 @@ repos:
     hooks:
       - id: black
         stages: [pre-commit]
+        args:
+          - --line-length=120
 
   - repo: https://github.com/pycqa/isort
     rev: 6.0.1
     hooks:
       - id: isort
-        args: ["--profile", "black"]
+        args: ["--profile", "black", "--line-length=120", "--filter-files"]
         stages: [pre-commit]
 
   - repo: https://github.com/pycqa/flake8
@@ -26,6 +28,7 @@ repos:
     hooks:
       - id: flake8
         stages: [pre-commit]
+        args: ["--max-line-length=120"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.15.0
