--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 bandit==1.8.3
 black==25.1.0
-fastapi==0.115.11
+# fastapi==0.115.11
+fastapi<=0.99.1
 flake8==7.1.2
 isort==6.0.1
 loguru==0.7.3
 mypy==1.15.0
 pre-commit==4.2.0
 python-dotenv==1.0.1
-redis-om==0.3.3
+# redis-om==0.3.3
+redis-om==0.2.2
 uvicorn==0.34.0
