updated req and renamed refactored req-dev

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_test.txt
+          pip install -r requirements-dev.txt
 
       - name: Run pre-commit checks
         run: pre-commit run --all-files
@@ -57,7 +57,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_test.txt
+          pip install -r requirements-dev.txt
 
       - name: Run tests with pytest
         run: pytest
