--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
         stages: [pre-commit]
 
   - repo: https://github.com/pycqa/flake8
-    rev: 7.1.2
+    rev: 7.2.0
     hooks:
       - id: flake8
         stages: [pre-commit]
@@ -35,6 +35,9 @@ repos:
     hooks:
       - id: mypy
         stages: [pre-commit]
+        args: ["--ignore-missing-imports", "--install-types"]
+        additional_dependencies:
+          - types-requests
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.8.3
