--- a/payment/requirements-dev.txt
+++ b/payment/requirements-dev.txt
@@ -1,4 +1,12 @@
 -r requirements.txt
+# pre-commit libraries
+bandit==1.8.3
+black==25.1.0
+flake8==7.1.2
+# testing libraries
 httpx==0.27.2
+isort==6.0.1
+mypy==1.15.0
+pre-commit==4.2.0
 pytest==8.3.5
 pytest-cov==6.0.0
